# orus

./: .bazelrc  .gitignore  BUILD.bazel  IMPLEMENTATION_PLAN.md  MODULE.bazel  PROJECT_SEED.md  SPECS.md  flake.nix
.agents/M0-001/: a3.md  handoff-r1.md  handoff-r2.md  handoff.md  verification-report-r1.md  verification-report-r2.md  verification-report.md  verification.md
.agents/M0-002/: a3.md  handoff-r1.md  handoff-r2.md  handoff-r3.md  handoff.md  verification-report-r1.md  verification-report-r2.md  verification-report-r3.md  verification-report.md  verification.md
.factory/: config.json  run.json
.factory/checks/M0-001/: c-01.json  c-02.json  c-03.json  c-04.json  c-05.json  c-06.json  c-07.json  c-08.json  c-09.json  c-10.json  c-11.json  c-12.json  c-13.json
.factory/checks/M0-001/runs/: run-20260722T105731Z.json  run-20260722T111448Z.json  run-20260722T111936Z.json  run-20260722T112100Z.json  run-20260722T114834Z.json  run-20260722T115238Z.json  run-20260722T134530Z.json  run-20260722T135021Z.json  run-20260722T135616Z.json
.factory/checks/M0-002/: c-01.json  c-02.json  c-03.json  c-04.json  c-05.json  c-06.json  c-07.json
.factory/checks/M0-002/runs/: run-20260722T145320Z.json  run-20260722T154456Z.json  run-20260722T155248Z.json  run-20260722T162639Z.json  run-20260722T163837Z.json  run-20260722T171208Z.json  run-20260722T172410Z.json  run-20260722T180203Z.json  run-20260722T182133Z.json  run-20260722T183843Z.json  run-20260722T190809Z.json  run-20260722T195725Z.json
.factory/prompts/: oracle.md
.factory/questions/: q-0001.json  q-0002.json  q-0003.json  q-0004.json  q-0005.json  q-0006.json  q-0007.json  q-0008.json  q-0009.json  q-0010.json  q-0011.json  q-0012.json  q-0013.json  q-0014.json  q-0015.json
.factory/results/03_spec_writer/r1/: result.json
.factory/results/07_plan_generator/r1/: result.json
.factory/results/07_plan_generator/r2/: result.json
.factory/results/09_implementer/r2/: result.json
.factory/results/10_verifier/r1/: result.json
.factory/results/11_rework/r1/: result.json
.factory/results/_archive/: 20260721T212904Z_01_discovery_r1.json  20260721T214413Z_03_spec_writer_r2.json  20260721T215224Z_04_spec_verifier_r1.json  20260721T220804Z_04_spec_verifier_r1.json  20260721T221045Z_03_spec_writer_r1.json  20260721T221414Z_04_spec_verifier_r1.json  20260721T221723Z_03_spec_writer_r1.json  20260721T222002Z_04_spec_verifier_r1.json  20260721T224913Z_05_domain_spec_writer_r1.json  20260721T231155Z_05_domain_spec_writer_r2.json  20260721T232047Z_06_domain_spec_verifier_r1.json  20260721T235358Z_05_domain_spec_writer_r1.json  20260722T000308Z_06_domain_spec_verifier_r1.json  20260722T003243Z_05_domain_spec_writer_r1.json  20260722T004256Z_06_domain_spec_verifier_r1.json  20260722T005707Z_05_domain_spec_writer_r1.json  20260722T010518Z_06_domain_spec_verifier_r1.json  20260722T011641Z_05_domain_spec_writer_r1.json  20260722T012443Z_06_domain_spec_verifier_r1.json  20260722T013044Z_05_domain_spec_writer_r1.json  20260722T013334Z_06_domain_spec_verifier_r1.json  20260722T014330Z_07_plan_generator_r1.json  20260722T023052Z_08_bundle_author_r1_M0-001.json  20260722T120054Z_10_verifier_r1_M0-001.json  20260722T135021Z_11_rework_r1_M0-001.json  20260722T140420Z_10_verifier_r1_M0-001.json  20260722T141623Z_08_bundle_author_r1_M0-002.json  20260722T155248Z_09_implementer_r2_M0-002.json  20260722T160653Z_10_verifier_r1_M0-002.json  20260722T172410Z_11_rework_r3_M0-002.json  20260722T174359Z_10_verifier_r1_M0-002.json  20260722T190200Z_10_verifier_r1_M0-002.json  20260722T195724Z_11_rework_r1_M0-002.json  20260722T201456Z_10_verifier_r1_M0-002.json
.factory/substrates/: github-actions.json
.factory/tasks/: M0-001.json  M0-002.json  M0-003.json  M0-004.json  M0-005.json  M0-006.json  M0-007.json  M0-008.json  M0-009.json  M0-010.json
.factory/workflows/pdca/: 01_discovery.md  03_spec_writer.md  04_spec_verifier.md  05_domain_spec_writer.md  06_domain_spec_verifier.md  07_plan_generator.md  08_bundle_author.md  09_implementer.md  10_verifier.md  11_rework.md  12_plan_reviser.md
.opencode/skills/front-desk/: SKILL.md
config/: BUILD.bazel  bcr-distdir.json  build-applicability.json  dependency-inventory.json  input-acquisition.json  m0-reference-environment.json  wrapper-map.json
contracts/: BUILD.bazel  build_contracts.cc  canonical_json.cc  crypto_resource.cc  evidence_contracts.cc  resource_monitor.h
contracts/include/orus/contracts/: contracts.h
docs/: build.md
docs/adr/: 0001-m0-build-toolchain-and-dependencies.md
python/orus_contracts/: BUILD.bazel  __init__.py  canonical.py
specs/: 00-ASSUMPTIONS.md  00-CHARTER.md  00-QUESTIONS.md  01-GLOSSARY.md  02-DECISIONS.md  03-RISKS.md  10-build-environment.md  11-governance-release.md  12-cli-diagnostics.md  13-ci-quality.md  14-performance-foundation.md  15-concurrent-corpus.md  16-security-foundations.md
specs/_reviews/: 2026-07-21_foundation_review.md  2026-07-21_phaseM0_review.md
tests/benchmarks/: BUILD.bazel  benchmark_smoke_test.cc
tests/contracts/: BUILD.bazel  boundary_test.py  build_test.cc  canonical_test.cc  evidence_test.cc  public_header_test.cc  python_parity_test.py  test_support.h
tests/contracts/fixtures/: corpus-reliability.json  corpus-run.json  perf-comparison.json  perf-raw-sample.json  perf-result.json  perf-runner.json  perf-workload.json  reference-fixed.json  reference-observed-fixed.json  release-evidence-assembled.json  sbom-descriptor.json
tests/fuzz/: BUILD.bazel  canonical_json_parser_fuzz.cc  fuzz_smoke_verifier.py
tests/fuzz/corpus/canonical_json/: invalid-number  valid-nested
toolchains/: BUILD.bazel
tools/: BUILD.bazel  format.py
tools/coverage/: BUILD.bazel  __init__.py  package_gate.py  packages.json
