package(default_visibility = ["//visibility:public"])

filegroup(
    name = "contract_data",
    srcs = [
        "bcr-distdir.json",
        "build-applicability.json",
        "dependency-inventory.json",
        "input-acquisition.json",
        "m0-reference-environment.json",
        "wrapper-map.json",
    ],
)

filegroup(
    name = "m0_reference_environment",
    srcs = ["m0-reference-environment.json"],
)
