load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools/build:build_facts.bzl", "embedded_build_facts")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "public_headers",
    srcs = ["include/orus/contracts/contracts.h"],
)

[
    config_setting(
        name = "facts_" + configuration,
        define_values = {"orus_configuration": configuration},
    )
    for configuration in [
        "asan",
        "benchmark",
        "dev",
        "fuzz",
        "gcc",
        "release",
        "tsan",
        "ubsan",
    ]
]

embedded_build_facts(
    name = "embedded_build_facts_source",
    compiler = select({
        ":facts_gcc": "gcc 15.2.0",
        "//conditions:default": "clang 21.1.8",
    }),
    configuration = select({
        ":facts_asan": "asan",
        ":facts_benchmark": "benchmark",
        ":facts_dev": "dev",
        ":facts_fuzz": "fuzz",
        ":facts_gcc": "gcc",
        ":facts_release": "release",
        ":facts_tsan": "tsan",
        ":facts_ubsan": "ubsan",
        "//conditions:default": "dev",
    }),
    product_version = "0.0.0-m0",
    target_platform = "linux-x86_64",
)

filegroup(
    name = "coverage_sources",
    srcs = glob(["*.cc"]),
)

cc_library(
    name = "contracts",
    srcs = [
        ":embedded_build_facts_source",
        "build_contracts.cc",
        "canonical_json.cc",
        "crypto_resource.cc",
        "evidence_contracts.cc",
        "resource_monitor.h",
    ],
    hdrs = ["include/orus/contracts/contracts.h"],
    includes = ["include"],
    deps = [
        "@glaze//:glaze",
        "@openssl_crypto//:crypto",
        "@utf8proc//:utf8proc",
    ],
)
